--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 Thanks for visiting! Let's explore together!🌟☘️</h4>
 
                 <br>
-                <a href="bio.html"></a>
+                <a href="bio.html">
                 <img src="images/get to know me.png" height="70" alt="Get to know me">
                 </a>
         </div>
