--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <a href="Home Page.html" accesskey="1" tabindex="1"> ๋࣭ ⭑────୨ৎ────⭑๋࣭  SYIQIN'S SCENE ๋࣭ ⭑────୨ৎ────⭑๋࣭  </a>
+            <a href="index.html" accesskey="1" tabindex="1"> ๋࣭ ⭑────୨ৎ────⭑๋࣭  SYIQIN'S SCENE ๋࣭ ⭑────୨ৎ────⭑๋࣭  </a>
         </div>
         <ul>
             <li><a href="bio.html" accesskey="2" tabindex="2">BIODATA</a></li>
