--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                 <br>
                 <a href="bio.html">
-                <img src="images/get to know me.png" height="70" alt="Get to know me">
+                <img src="images/get to know me.png" height="70">
                 </a>
         </div>
               
