--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anchor Links Example</title>
+    <title>Gallery</title>
     <style>
         /* Navigation Bar */
         .navbar {
@@ -189,7 +189,7 @@
         <li><a href="#me">ME</a></li>
         <li><a href="#family">FAMILY</a></li>
         <li><a href="#friends">FRIENDS</a></li>
-        <li><a href="#online-friends and cousins">ONLINE FRIENDS & COUSINS</a></li>
+        <li><a href="#online-friends">ONLINE FRIENDS & COUSINS</a></li>
     </ul>
 
     <!-- Sections for Content -->
