--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Syiqin Scene - Home</title>
   <style>
-    /* General Reset for Consistency */
+    
     body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box; /* Ensures padding and border are included in dimensions */
+      box-sizing: border-box; 
       font-family:'Arial Narrow', Arial, sans-serif;
-      background-color: #f1fdc2; /* Soft Light Beige */
+      background-color: #f1fdc2; 
     }
 
     /* Navigation Bar */
     .navbar {
-      background-color: #597a26; /* Muted Green */
+      background-color: #597a26; 
       padding: 15px 20px;
       text-align: left;
       font-family: Helvetica;
-      border-bottom: 3px solid #E8AA14; /* Golden Accent */
+      border-bottom: 3px solid #E8AA14; 
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -28,13 +28,13 @@
     .navbar .logo a {
       font-size: 30px;
       font-weight: bold;
-      color: #F8EDD9; /* Creamy white */
+      color: #F8EDD9; 
       text-decoration: none;
       transition: color 0.3s ease;
     }
 
     .navbar .logo a:hover {
-      color: #E8AA14; /* Golden Yellow */
+      color: #E8AA14; 
     }
 
     .navbar ul {
@@ -50,13 +50,13 @@
 
     .navbar li a {
       font-size: 18px;
-      color: #F8EDD9; /* Creamy white */
+      color: #F8EDD9; 
       text-decoration: none;
       transition: color 0.3s ease;
     }
 
     .navbar li a:hover {
-      color: #E8AA14; /* Golden Yellow */
+      color: #E8AA14; 
     }
 
     /* Welcome Section */
@@ -98,8 +98,8 @@
       margin-top: 30px;
       max-width: 600px;
       padding: 20px;
-      border: 2px solid #1d6929; /* Border around the text */
-      border-radius: 10px; /* Rounded corners for the border */
+      border: 2px solid #1d6929; 
+      border-radius: 10px; 
     }
 
     .welcome-text h1 {
@@ -110,31 +110,31 @@
 
     .welcome-text h4 {
       font-size: 18px;
-      color: #000000; /* Slightly lighter green */
+      color: #000000; 
       margin-top: 10px;
       line-height: 1.6;
     }
 
     /* Footer */
     .footer {
-      background-color: #597a26; /* Muted Green */
-      color: #F8EDD9; /* Creamy White */
+      background-color: #597a26;
+      color: #F8EDD9; 
       text-align: center;
       font-family: Helvetica;
-      border-top: 3px solid #E8AA14; /* Golden Accent */
-      width: 100%; /* Ensures the footer spans the full screen */
-      margin: 0; /* Removes any default margins */
-      padding: 10px 0; /* Adds vertical spacing for content */
-      box-sizing: border-box; /* Includes padding and border in the width calculation */
+      border-top: 3px solid #E8AA14; 
+      width: 100%; 
+      margin: 0; 
+      padding: 10px 0; 
+      box-sizing: border-box; 
     }
 
     .footer a {
-      color: #F8EDD9; /* Creamy white */
+      color: #F8EDD9; 
       text-decoration: none;
     }
 
     .footer a:hover {
-      color: #E8AA14; /* Golden Yellow */
+      color: #E8AA14; 
     }
 
     .date-time {
@@ -186,19 +186,19 @@
 
   <footer class="footer">
     <div>
-      <a href="mailto:nasyiqin06@gmail.com" accesskey="8" tabindex="8">
+      <a href="mailto:nasyiqin06@gmail.com" tabindex="8">
         <img src="images/gmail.png" width="50" height="50" alt="Email">
       </a>
-      <a href="https://www.instagram.com/cffeoasy" accesskey="9" tabindex="9">
+      <a href="https://www.instagram.com/cffeoasy"  tabindex="9">
         <img src="images/instagram_resize_real.png" width="50" height="50" alt="Instagram">
       </a>
-      <a href="https://x.com/CFFEOASY" accesskey="10" tabindex="10">
+      <a href="https://x.com/CFFEOASY"  tabindex="10">
         <img src="images/twitter.png" width="50" height="50" alt="Twitter">
       </a>
     </div>
-    <p class="access-keys">Access Key Shortcuts: 1 - Home | 2 - Biodata | 3 - Education | 4 - Experience | 5 - Family | 6 - Friends | 7 - Gallery | 8 - Email | 9 - Instagram | 10 - Twitter</p>
+    <p class="access-keys">Access Key Shortcuts (Alt+N): 1 - Home | 2 - Biodata | 3 - Education | 4 - Experience | 5 - Family | 6 - Friends | 7 - Gallery | </p>
 
-    <p><a href="#top" accesskey="T" tabindex="11">Back to Top</a></p>
+    <p><a href="#top" tabindex="11">Back to Top</a></p>
 
     <p>© 2024 SYIQIN'S SCENE</p>
 
